# my-python-project

./: .gitignore  01_create_structure.py  E156-PROTOCOL.md  LICENSE  MANIFEST.in  index.html  push.sh  pyproject.toml  setup_ipdma_complete.py
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
e156-submission/assets/: dashboard.html
src/ipdma/: __init__.py  api.py  config.py  exceptions.py  model_spec.py
src/ipdma/engines/: base.py
tests/: conftest.py  test_basic.py
