[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ipdma"
authors = [{name = "IPD Meta-Analysis Contributors", email = "contact@ipdma.org"}]
description = "State-of-the-art Individual Patient Data Meta-Analysis platform"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0,<2.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pymc>=5.10.0",
    "arviz>=0.16.0",
    "networkx>=3.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]
dynamic = ["version"]

[project.optional-dependencies]
r = ["rpy2>=3.5.0"]
survival = ["scikit-survival>=0.21.0", "lifelines>=0.27.0"]
causal = ["econml>=0.14.0", "doubleml>=0.7.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-book-theme>=1.0.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/ipdma/ipdma"
Documentation = "https://ipdma.readthedocs.io"
"Bug Reports" = "https://github.com/ipdma/ipdma/issues"
"Source Code" = "https://github.com/ipdma/ipdma"

[project.scripts]
ipdma = "ipdma.cli.main:cli"

[tool.setuptools_scm]
write_to = "src/ipdma/__version__.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C", "S"]
ignore = ["E501", "D203", "D213"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true